--- a/banking_airflow/requirements.txt
+++ b/banking_airflow/requirements.txt
@@ -1,7 +1,5 @@
-apache-airflow-providers-snowflake
-snowflake-connector-python
-apache-airflow-providers-common-sql
-pandas
-pyarrow
-dbt-snowflake
-apache-airflow-providers-amazon
+apache-airflow-providers-snowflake==5.1.0
+snowflake-connector-python==3.10.0
+apache-airflow-providers-common-sql==1.8.0
+pandas==2.1.4
+pyarrow==14.0.2
